# ffmpeg-api

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
include/: audio_mixer.hpp  events.hpp  export.hpp  recorder.hpp  render_settings.hpp
src/: audio_mixer.cpp  compat.cpp  recorder.cpp  utils.cpp  utils.hpp
src/event-api/: events.cpp
